--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
+  <header></header>
 <main>
-  <section class="cardContainer">
+  <article class="cardContainer">
     
-    <article class="pictureContainer">
+    <div class="pictureContainer">
       <picture class="pictureElement">
-        <source srcset="./images/image-header-mobile-mine.jpg" media="(max-width: 375px)">
-        <img class="image" src="./images/image-header-desktop-mine.jpg" alt="People working">
+        <source srcset="./images/image-header-mobile.jpg" media="(max-width: 375px)">
+        <img class="image" src="./images/image-header-desktok.jpg" alt="People working">
       </picture>
-    </article>
+    </div>
     
-    <article class="textContainer"> 
+    <div class="textContainer"> 
       <h1 class="cardTitle">Get <span class="textFilter">insights</span> that help your business grow.</h1>
       <p class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
       <ul class="stats">
@@ -29,9 +30,9 @@
         <li class="statsItem">314<span class="textMention">Templates</span></li>
         <li class="statsItem">12M+<span class="textMention">Queries</span></li>
       </ul>
-    </article>
+    </div>
   
-  </section>
+  </article>
   
 </main>
   
